--- a/audio-analysis/package.json
+++ b/audio-analysis/package.json
@@ -1,9 +1,14 @@
 {
   "name": "audio-analysis",
-  "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT",
+  "scripts": {
+    "build": "webpack"
+  },
   "dependencies": {
     "p5": "^0.10.2"
+  },
+  "devDependencies": {
+    "webpack": "^4.41.6",
+    "webpack-cli": "^3.3.11"
   }
 }
