--- a/audio-analysis/package.json
+++ b/audio-analysis/package.json
@@ -18,9 +18,11 @@
     "babel-loader": "^8.0.6",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-p5js": "^1.0.1",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-prettier": "^3.1.2",
+    "file-loader": "^5.1.0",
     "husky": ">=4",
     "lint-staged": ">=10",
     "prettier": "^1.19.1",
