--- a/audio-analysis/package.json
+++ b/audio-analysis/package.json
@@ -16,6 +16,8 @@
     "@babel/core": "^7.8.6",
     "@babel/preset-env": "^7.8.6",
     "babel-loader": "^8.0.6",
+    "core-js": "3",
+    "css-loader": "^3.4.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-p5js": "^1.0.1",
@@ -26,6 +28,7 @@
     "husky": ">=4",
     "lint-staged": ">=10",
     "prettier": "^1.19.1",
+    "style-loader": "^1.1.3",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
