--- a/audio-analysis/package.json
+++ b/audio-analysis/package.json
@@ -3,7 +3,8 @@
   "main": "index.js",
   "license": "GPL-3.0-or-later",
   "scripts": {
-    "dev": "env NODE_ENV=development webpack-dev-server",
+    "start": "nodemon --watch src/server --exec babel-node src/server",
+    "dev": "nodemon --watch src/client --exec env NODE_ENV=development webpack",
     "build": "env NODE_ENV=production webpack",
     "lint": "eslint",
     "fix": "eslint --cache --fix --ext .js ./src",
@@ -11,11 +12,15 @@
   },
   "dependencies": {
     "dropzone": "^5.7.0",
+    "express": "^4.17.1",
+    "express-fileupload": "^1.1.6",
     "jquery": "^3.4.1",
+    "nanoid": "^2.1.11",
     "p5": "^0.10.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
+    "@babel/node": "^7.8.4",
     "@babel/preset-env": "^7.8.6",
     "babel-loader": "^8.0.6",
     "core-js": "3",
@@ -29,11 +34,11 @@
     "file-loader": "^5.1.0",
     "husky": ">=4",
     "lint-staged": ">=10",
+    "nodemon": "^2.0.2",
     "prettier": "^1.19.1",
     "style-loader": "^1.1.3",
     "webpack": "^4.41.6",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-cli": "^3.3.11"
   },
   "husky": {
     "hooks": {
